05_squares/grade.txt
Grading at Thu Oct  1 21:32:36 UTC 2020
Trying to compile your code and link with squares_test.o
squares.c: In function ‘squares’:
squares.c:58:15: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
       if(x_r1 && y_r1 || y_r2 && x_r2)
               ^
squares.c:69:18: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  if ((x < size1) && ((y == 0) || (y == size1 - 1)) || ((y < size1) && ((x == 0) || (x == size1 - 1)))){
                  ^
cc1: all warnings being treated as errors
Could not compile your code

Overall Grade: FAILED
